--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "4.11.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@react-pdf/renderer": "^3.0.2",
     "@types/react-router-dom": "5.3.3",
     "axios": "^0.27.2",
     "filter-material-ui": "2.7.0",
@@ -24,9 +25,11 @@
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0",
@@ -36,11 +39,13 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.26",
+    "@types/react-big-calendar": "^0.38.3",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
     "@types/redux-form": "^8.3.5",
